--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>부산뮤직실용음악학원</title>
+  <meta name="description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta name="keywords" content="부산뮤직실용음악학원, 부산실용음악학원, 부산보컬학원, 부산기타학원, 부산작곡학원, 부산피아노학원">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="부산뮤직실용음악학원">
+  <meta property="og:description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta property="og:url" content="https://88b04b.github.io/project08/">
+  <meta property="og:image" content="https://88b04b.github.io/project08/images/ogimage.png">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="부산뮤직실용음악학원">
+  <meta name="twitter:description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta name="twitter:url" content="https://88b04b.github.io/project08/">
+  <meta name="twitter:image" content="https://88b04b.github.io/project08/images/ogimage.png">
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/font.css">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
@@ -19,7 +32,7 @@
     <header class="header">
       <div class="inner">
         <h1>
-          <a href="/">
+          <a href="">
             <span class="blind">부산뮤직</span>
           </a>
         </h1>
@@ -212,7 +225,7 @@
           </h2>
           <ul>
             <li>
-              <img src="./images/system01.jpg" alt="">
+              <img src="./images/system01.jpg" alt="부산뮤직실용음악학원">
               <div class="text" data-order="01">
                 <strong>
                   철저한 1:1 개인레슨
@@ -225,7 +238,7 @@
               </div>
             </li>
             <li>
-              <img src="./images/system02.jpg" alt="">
+              <img src="./images/system02.jpg" alt="부산뮤직실용음악학원">
               <div class="text" data-order="02">
                 <strong>
                   레코딩 및 1인 미디어 제작
@@ -238,7 +251,7 @@
               </div>
             </li>
             <li>
-              <img src="./images/system03.jpg" alt="">
+              <img src="./images/system03.jpg" alt="부산뮤직실용음악학원">
               <div class="text" data-order="03">
                 <strong>
                   정기공연 및 버스킹
