--- a/introduce.html
+++ b/introduce.html
@@ -5,6 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>부산뮤직실용음악학원</title>
+  <meta name="description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta name="keywords" content="부산뮤직실용음악학원, 부산실용음악학원, 부산보컬학원, 부산기타학원, 부산작곡학원, 부산피아노학원">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="부산뮤직실용음악학원">
+  <meta property="og:description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta property="og:url" content="https://88b04b.github.io/project08/">
+  <meta property="og:image" content="https://88b04b.github.io/project08/images/ogimage.png">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="부산뮤직실용음악학원">
+  <meta name="twitter:description" content="입시와 오디션은 물론 취미반도 부산뮤직입니다.">
+  <meta name="twitter:url" content="https://88b04b.github.io/project08/">
+  <meta name="twitter:image" content="https://88b04b.github.io/project08/images/ogimage.png">
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/font.css">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
@@ -19,7 +32,7 @@
     <header class="header">
       <div class="inner">
         <h1>
-          <a href="/">
+          <a href="">
             <span class="blind">부산뮤직</span>
           </a>
         </h1>
@@ -124,7 +137,7 @@
             </p>
           </div>
           <figure>
-            <img src="./images/about_us.jpg" alt="">
+            <img src="./images/about_us.jpg" alt="부산뮤직실용음악학원">
           </figure>
         </div>
       </section>
