--- a/introduce.html
+++ b/introduce.html
@@ -32,7 +32,7 @@
     <header class="header">
       <div class="inner">
         <h1>
-          <a href="">
+          <a href="./index.html">
             <span class="blind">부산뮤직</span>
           </a>
         </h1>
